--- a/#PP1_GrupoH/#PP1_GrupoH/Views/Home/Index.cshtml
+++ b/#PP1_GrupoH/#PP1_GrupoH/Views/Home/Index.cshtml
@@ -9,8 +9,7 @@
 <ul>
     <li>Camila Luna Castro: Videojuegos, Leer, Entrenar</li>
     <li>Catalina Chaves: Bailar, Paisajismo, Estilista</li>
-    <li>Miembro 3</li>
-    <li>Miembro 4</li>
+    <li>Pablo: Hobby 1, Hobby 2, Hobby 3</li>
+    <li>Joel: Hobby 1, Hobby 2, Hobby 3</li>
 </ul>
-
 </div>
