--- a/#PP1_GrupoH/#PP1_GrupoH/Views/Home/Series.cshtml
+++ b/#PP1_GrupoH/#PP1_GrupoH/Views/Home/Series.cshtml
@@ -1,12 +1,29 @@
-﻿@@page
-@{
+﻿@{
     ViewData["Title"] = "Series Favoritas - Grupo H";
 }
 
 <h2>Series Favoritas</h2>
 <ul>
-    <li>Camila Luna Castro: Dark, Monster, Fullmetal Alchemist: Brotherhood</li>
-    <li>Catalina Chaves: RPDR, Bridgerton, Challenge</li>
-    <li>Miembro 3</li>
-    <li>Miembro 4</li>
+    <li><b>Camila Luna Castro</b></li>
+    <li><a href="https://www.culturagenial.com/es/serie-dark/" target="_blank">Dark</a></li>
+    <li><a href="https://es.wikipedia.org/wiki/Monster_(serie_de_televisi%C3%B3n_surcoreana)" target="_blank">Monster</a></li>
+    <li><a href="https://es.wikipedia.org/wiki/Anexo:Episodios_de_Fullmetal_Alchemist:_Brotherhood" target="_blank">Fullmetal Alchemist: Brotherhood</a></li>
+</ul>
+<ul>
+    <li><b>Catalina Chaves Aguilar</b></li>
+    <li><a href="https://www.lavanguardia.com/peliculas-series/series/rupaul-reinas-del-drag-8514" target="_blank">RPDR</a></li>
+    <li><a href="https://www.filmaffinity.com/es/film586040.html" target="_blank">Bridgerton</a></li>
+    <li><a href="https://m.imdb.com/title/tt0176095/?language=es-es" target="_blank">Challenge</a></li>
+</ul>
+<ul>
+    <li><b>Pablo</b></li>
+    <li><a href="https://www.lavanguardia.com/peliculas-series/series/rupaul-reinas-del-drag-8514" target="_blank">Serie 1</a></li>
+    <li><a href="https://www.filmaffinity.com/es/film586040.html" target="_blank">Serie 2</a></li>
+    <li><a href="https://m.imdb.com/title/tt0176095/?language=es-es" target="_blank">Serie 3</a></li>
+</ul>
+<ul>
+    <li><b>Joel</b></li>
+    <li><a href="https://www.lavanguardia.com/peliculas-series/series/rupaul-reinas-del-drag-8514" target="_blank">Serie 1</a></li>
+    <li><a href="https://www.filmaffinity.com/es/film586040.html" target="_blank">Serie 2</a></li>
+    <li><a href="https://m.imdb.com/title/tt0176095/?language=es-es" target="_blank">Serie 3</a></li>
 </ul>
