--- a/#PP1_GrupoH/#PP1_GrupoH/Views/Home/Songs.cshtml
+++ b/#PP1_GrupoH/#PP1_GrupoH/Views/Home/Songs.cshtml
@@ -1,20 +1,32 @@
-﻿@@page
-@{
+﻿@{
     ViewData["Title"] = "Canciones Favoritas - Grupo H";
 }
 
 <h2>Canciones Favoritas</h2>
 <ul>
-    <li>Camila Luna Castro </li>
+    <li><b>Camila Luna Castro</b></li>
     <li><a href="https://open.spotify.com/intl-es/track/3jjsRKEsF42ccXf8kWR3nu?si=84b4e941b66f4b6b" target="_blank">Washing Machine Heart - Mitski</a></li>
     <li><a href="https://open.spotify.com/intl-es/track/1VcLiPmina1L3xlLkJ5OTS?si=ad84a4a66f7f4025" target="_blank">XXI Century Blood - The Warning</a></li>
     <li><a href="https://open.spotify.com/intl-es/track/2HVCLZ6dMDelXhloO5sAjV?si=15088b6baee341b3" target="_blank">Ego Brain - System of a Down</a></li>
 </ul>
 <ul>
-    <li>Catalina Chaves </li>
+    <li><b>Catalina Chaves Aguilar</b></li>
     <li><a href="https://www.youtube.com/watch?v=MM62wjLrgmA" target="_blank">Schism - TOOL</a></li>
-    <li><a href="https://www.youtube.com/watch?v=uCXVKd-VjNA" target="_blank">Lamborghinis - Lil Goat</a></li>
+    <li><a href="https://www.youtube.com/watch?v=mdV5Jrj3hnY" target="_blank">Lamborghinis - Lil Goat</a></li>
     <li><a href="https://www.youtube.com/watch?v=7PeGKDfVlHA" target="_blank">Calle de las Sirenas - KABAH</a></li>
 </ul>
+<ul>
+    <li><b>Pablo</b></li>
+    <li><a href="https://www.youtube.com/watch?v=f2xGxd9xPYA&list=PLFOFGuejefP89rRlmEsikLkJ_eIDMHRGF" target="_blank">cancion 1</a></li>
+    <li><a href="https://www.youtube.com/watch?v=iBQrDoTirRo&list=PLFOFGuejefP89rRlmEsikLkJ_eIDMHRGF&index=2" target="_blank">cancion 2</a></li>
+    <li><a href="https://www.youtube.com/watch?v=HV7mLcsUp5U&list=PLFOFGuejefP89rRlmEsikLkJ_eIDMHRGF&index=13" target="_blank">cancion 3</a></li>
+</ul>
+<ul>
+    <li><b>Joel</b></li>
+    <li><a href="https://www.youtube.com/watch?v=f2xGxd9xPYA&list=PLFOFGuejefP89rRlmEsikLkJ_eIDMHRGF" target="_blank">cancion 1</a></li>
+    <li><a href="https://www.youtube.com/watch?v=iBQrDoTirRo&list=PLFOFGuejefP89rRlmEsikLkJ_eIDMHRGF&index=2" target="_blank">cancion 2</a></li>
+    <li><a href="https://www.youtube.com/watch?v=HV7mLcsUp5U&list=PLFOFGuejefP89rRlmEsikLkJ_eIDMHRGF&index=13" target="_blank">cancion 3</a></li>
+</ul>
+
 
 
