Partes Joel y Pablo

--- a/#PP1_GrupoH/#PP1_GrupoH/Views/Home/Index.cshtml
+++ b/#PP1_GrupoH/#PP1_GrupoH/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 <ul>
     <li>Camila Luna Castro: Videojuegos, Leer, Entrenar</li>
     <li>Catalina Chaves: Bailar, Paisajismo, Estilista</li>
-    <li>Pablo: Hobby 1, Hobby 2, Hobby 3</li>
-    <li>Joel: Hobby 1, Hobby 2, Hobby 3</li>
+    <li>Pablo Hernández Aguilar: Gimnasio, Fútbol, Escuchar Musica</li>
+    <li>Ronald Joel Angulo Hernández: Ejercicio, Comer, Viajar</li>
 </ul>
 </div>
