--- a/#PP1_GrupoH/#PP1_GrupoH/Views/Home/Series.cshtml
+++ b/#PP1_GrupoH/#PP1_GrupoH/Views/Home/Series.cshtml
@@ -11,19 +11,19 @@
 </ul>
 <ul>
     <li><b>Catalina Chaves Aguilar</b></li>
-    <li><a href="https://www.lavanguardia.com/peliculas-series/series/rupaul-reinas-del-drag-8514" target="_blank">RPDR</a></li>
-    <li><a href="https://www.filmaffinity.com/es/film586040.html" target="_blank">Bridgerton</a></li>
+    <li><a href="https://www.lavanguardia.com/peliculas-series/series/rupaul-reinas-del-drag-8514" target="_blank">RuPaul's Drag Race</a></li>
+    <li><a href="https://www.sensacine.com/series/serie-23886/" target="_blank">Bridgerton</a></li>
     <li><a href="https://m.imdb.com/title/tt0176095/?language=es-es" target="_blank">Challenge</a></li>
 </ul>
 <ul>
-    <li><b>Pablo</b></li>
-    <li><a href="https://www.lavanguardia.com/peliculas-series/series/rupaul-reinas-del-drag-8514" target="_blank">Serie 1</a></li>
-    <li><a href="https://www.filmaffinity.com/es/film586040.html" target="_blank">Serie 2</a></li>
-    <li><a href="https://m.imdb.com/title/tt0176095/?language=es-es" target="_blank">Serie 3</a></li>
+    <li><b>Pablo Hernández Aguilar</b></li>
+    <li><a href="https://www.sensacine.com/series/serie-49/" target="_blank">Friends</a></li>
+    <li><a href="https://www.sensacine.com/series/serie-274/" target="_blank">Grey´s Anatomy</a></li>
+    <li><a href="https://www.sensacine.com.mx/series/serie-3247/" target="_blank">The Big Bang Theory</a></li>
 </ul>
 <ul>
-    <li><b>Joel</b></li>
-    <li><a href="https://www.lavanguardia.com/peliculas-series/series/rupaul-reinas-del-drag-8514" target="_blank">Serie 1</a></li>
-    <li><a href="https://www.filmaffinity.com/es/film586040.html" target="_blank">Serie 2</a></li>
-    <li><a href="https://m.imdb.com/title/tt0176095/?language=es-es" target="_blank">Serie 3</a></li>
+    <li><b>Ronald Joel Angulo Hernández</b></li>
+    <li><a href="https://www.sensacine.com/series/serie-7330/" target="_blank">The Walking Dead</a></li>
+    <li><a href="https://www.sensacine.com/series/serie-3517/" target="_blank">Breaking Bad</a></li>
+    <li><a href="https://www.sensacine.com/series/serie-16950/" target="_blank">Better Call Saul</a></li>
 </ul>
