--- a/#PP1_GrupoH/#PP1_GrupoH/Views/Home/Songs.cshtml
+++ b/#PP1_GrupoH/#PP1_GrupoH/Views/Home/Songs.cshtml
@@ -5,9 +5,9 @@
 <h2>Canciones Favoritas</h2>
 <ul>
     <li><b>Camila Luna Castro</b></li>
-    <li><a href="https://open.spotify.com/intl-es/track/3jjsRKEsF42ccXf8kWR3nu?si=84b4e941b66f4b6b" target="_blank">Washing Machine Heart - Mitski</a></li>
-    <li><a href="https://open.spotify.com/intl-es/track/1VcLiPmina1L3xlLkJ5OTS?si=ad84a4a66f7f4025" target="_blank">XXI Century Blood - The Warning</a></li>
-    <li><a href="https://open.spotify.com/intl-es/track/2HVCLZ6dMDelXhloO5sAjV?si=15088b6baee341b3" target="_blank">Ego Brain - System of a Down</a></li>
+    <li><a href="https://youtu.be/3vjkh-acmTE" target="_blank">Washing Machine Heart - Mitski</a></li>
+    <li><a href="https://youtu.be/syTyga3lVL0" target="_blank">XXI Century Blood - The Warning</a></li>
+    <li><a href="https://youtu.be/SCXdbOsP5Ew" target="_blank">Ego Brain - System of a Down</a></li>
 </ul>
 <ul>
     <li><b>Catalina Chaves Aguilar</b></li>
@@ -16,16 +16,16 @@
     <li><a href="https://www.youtube.com/watch?v=7PeGKDfVlHA" target="_blank">Calle de las Sirenas - KABAH</a></li>
 </ul>
 <ul>
-    <li><b>Pablo</b></li>
-    <li><a href="https://www.youtube.com/watch?v=f2xGxd9xPYA&list=PLFOFGuejefP89rRlmEsikLkJ_eIDMHRGF" target="_blank">cancion 1</a></li>
-    <li><a href="https://www.youtube.com/watch?v=iBQrDoTirRo&list=PLFOFGuejefP89rRlmEsikLkJ_eIDMHRGF&index=2" target="_blank">cancion 2</a></li>
-    <li><a href="https://www.youtube.com/watch?v=HV7mLcsUp5U&list=PLFOFGuejefP89rRlmEsikLkJ_eIDMHRGF&index=13" target="_blank">cancion 3</a></li>
+    <li><b>Pablo Hernández Aguilar</b></li>
+    <li><a href="https://youtu.be/92XVwY54h5k" target="_blank">Car Radio - twenty one pilots</a></li>
+    <li><a href="https://youtu.be/SkBML8JgD0k" target="_blank">Polaris (Remix) - Saiko, Feid, Quevedo ft. Mora</a></li>
+    <li><a href="https://youtu.be/W0yp3rSfx3I" target="_blank">She don´t give a FO - Duki ft. Khea</a></li>
 </ul>
 <ul>
-    <li><b>Joel</b></li>
-    <li><a href="https://www.youtube.com/watch?v=f2xGxd9xPYA&list=PLFOFGuejefP89rRlmEsikLkJ_eIDMHRGF" target="_blank">cancion 1</a></li>
-    <li><a href="https://www.youtube.com/watch?v=iBQrDoTirRo&list=PLFOFGuejefP89rRlmEsikLkJ_eIDMHRGF&index=2" target="_blank">cancion 2</a></li>
-    <li><a href="https://www.youtube.com/watch?v=HV7mLcsUp5U&list=PLFOFGuejefP89rRlmEsikLkJ_eIDMHRGF&index=13" target="_blank">cancion 3</a></li>
+    <li><b>Ronald Joel Angulo Hernández</b></li>
+    <li><a href="https://www.youtube.com/watch?v=WnA8B6ij1Zc" target="_blank">Mercy - Stone Sour</a></li>
+    <li><a href="https://www.youtube.com/watch?v=VAWjsVoDpm0" target="_blank">Got The Life - Korn</a></li>
+    <li><a href="https://www.youtube.com/watch?v=fn1R-5p_j5c&rco=1" target="_blank">Welcome To The Machine - Pink Floyd</a></li>
 </ul>
 
 
